--- a/eu/eu.html
+++ b/eu/eu.html
@@ -1,1 +1,255 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="List of European countries with links to detailed pages and images.">
+	<title>Country List</title>
+	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+	<style>
+		.country-item img {
+			width: 100%;
+			height: auto;
+		}
+		.country-item {
+			margin-bottom: 20px;
+		}
+		.country-item p {
+			text-align: center;
+			margin: 0;
+		}
+	</style>
+</head>
+<body>
+	<header>
+		<div class="container">
+			<h1 class="my-4">European Country List</h1>
+		</div>
+	</header>
+	<main>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/luxembourg.html" aria-label="Luxembourg">
+						<img src="/countries/lu.svg" alt="Luxembourg">
+						<p>Luxembourg</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/belgium.html" aria-label="Belgium">
+						<img src="/countries/be.svg" alt="Belgium">
+						<p>Belgium</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/hungary.html" aria-label="Hungary">
+						<img src="/countries/hu.svg" alt="Hungary">
+						<p>Hungary</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/estonia.html" aria-label="Estonia">
+						<img src="/countries/ee.svg" alt="Estonia">
+						<p>Estonia</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/poland.html" aria-label="Poland">
+						<img src="/countries/pl.svg" alt="Poland">
+						<p>Poland</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/netherlands.html" aria-label="Netherlands">
+						<img src="/countries/nl.svg" alt="Netherlands">
+						<p>Netherlands</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/bulgaria.html" aria-label="Bulgaria">
+						<img src="/countries/bg.svg" alt="Bulgaria">
+						<p>Bulgaria</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/lithuania.html" aria-label="Lithuania">
+						<img src="/countries/lt.svg" alt="Lithuania">
+						<p>Lithuania</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/sweden.html" aria-label="Sweden">
+						<img src="/countries/se.svg" alt="Sweden">
+						<p>Sweden</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/france.html" aria-label="France">
+						<img src="/countries/fr.svg" alt="France">
+						<p>France</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/germany.html" aria-label="Germany">
+						<img src="/countries/de.svg" alt="Germany">
+						<p>Germany</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/denmark.html" aria-label="Denmark">
+						<img src="/countries/dk.svg" alt="Denmark">
+						<p>Denmark</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/spain.html" aria-label="Spain">
+						<img src="/countries/es.svg" alt="Spain">
+						<p>Spain</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/san-marino.html" aria-label="San Marino">
+						<img src="/countries/sm.svg" alt="San Marino">
+						<p>San Marino</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/finland.html" aria-label="Finland">
+						<img src="/countries/fi.svg" alt="Finland">
+						<p>Finland</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/liechtenstein.html" aria-label="Liechtenstein">
+						<img src="/countries/li.svg" alt="Liechtenstein">
+						<p>Liechtenstein</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/greece.html" aria-label="Greece">
+						<img src="/countries/gr.svg" alt="Greece">
+						<p>Greece</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/norway.html" aria-label="Norway">
+						<img src="/countries/no.svg" alt="Norway">
+						<p>Norway</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/italy.html" aria-label="Italy">
+						<img src="/countries/it.svg" alt="Italy">
+						<p>Italy</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/romania.html" aria-label="Romania">
+						<img src="/countries/ro.svg" alt="Romania">
+						<p>Romania</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/austria.html" aria-label="Austria">
+						<img src="/countries/at.svg" alt="Austria">
+						<p>Austria</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/portugal.html" aria-label="Portugal">
+						<img src="/countries/pt.svg" alt="Portugal">
+						<p>Portugal</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/iceland.html" aria-label="Iceland">
+						<img src="/countries/is.svg" alt="Iceland">
+						<p>Iceland</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/malta.html" aria-label="Malta">
+						<img src="/countries/mt.svg" alt="Malta">
+						<p>Malta</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/croatia.html" aria-label="Croatia">
+						<img src="/countries/hr.svg" alt="Croatia">
+						<p>Croatia</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/slovakia.html" aria-label="Slovakia">
+						<img src="/countries/sk.svg" alt="Slovakia">
+						<p>Slovakia</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/slovenia.html" aria-label="Slovenia">
+						<img src="/countries/si.svg" alt="Slovenia">
+						<p>Slovenia</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/serbia.html" aria-label="Serbia">
+						<img src="/countries/rs.svg" alt="Serbia">
+						<p>Serbia</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/czechia.html" aria-label="Czechia">
+						<img src="/countries/cz.svg" alt="Czechia">
+						<p>Czechia</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/latvia.html" aria-label="Latvia">
+						<img src="/countries/lv.svg" alt="Latvia">
+						<p>Latvia</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/montenegro.html" aria-label="Montenegro">
+						<img src="/countries/me.svg" alt="Montenegro">
+						<p>Montenegro</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/moldova.html" aria-label="Moldova">
+						<img src="/countries/md.svg" alt="Moldova">
+						<p>Moldova</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/andorra.html" aria-label="Andorra">
+						<img src="/countries/ad.svg" alt="Andorra">
+						<p>Andorra</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/albania.html" aria-label="Albania">
+						<img src="/countries/al.svg" alt="Albania">
+						<p>Albania</p>
+					</a>
+				</div>
+				<div class="col-md-4 col-lg-3 country-item">
+					<a href="/monaco.html" aria-label="Monaco">
+						<img src="/countries/mc.svg" alt="Monaco">
+						<p>Monaco</p>
+					</a>
+				</div>
+			</div>
+		</div>
+	</main>
+	<footer>
+		<div class="container">
+			<p class="text-center my-4">© 2024 European Countries</p>
+		</div>
+	</footer>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
 
