--- a/map.html
+++ b/map.html
@@ -12,7 +12,8 @@
             position: relative;
             width: 600px; /* Adjust the width as needed */
             height: 300px; /* Adjust the height as needed */
-            background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP8/wcAAgEBAP0llYAAAAABJRU5ErkJggg=='); /* Example base64 image */
+            background-image: url('https://www.worldometers.info/img/7-continents-of-the-world.gif
+            ); /* Example base64 image */
             background-size: cover;
         }
         .continent {
