--- a/map.html
+++ b/map.html
@@ -39,7 +39,7 @@
     <div class="map-container">
         <a href="#africa" class="continent" id="africa">AF</a>
         <a href="#asia" class="continent" id="asia">AS</a>
-        <a href="#europe" class="continent" id="europe">EU</a>
+        <a href="eu.html" class="continent" id="europe">EU</a>
         <a href="#north-america" class="continent" id="north-america">NA</a>
         <a href="#south-america" class="continent" id="south-america">SA</a>
         <a href="#australia" class="continent" id="australia">AU</a>
