--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
 <body>
     <div class="container my-5">
         <div class="row">
-        
             <!-- Card 1 -->
-            <div class="col-md-4 mb-4">
+            <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
                 <div class="card">
                     <img src="https://via.placeholder.com/150" class="card-img-top" alt="7 Reasons to Go on Holidays">
                     <div class="card-body">
                         <h5 class="card-title">7 Reasons to Go on Holidays</h5>
-                        <a href="https://www.html" class="btn btn-primary">Learn More</a>
+                        <a href="https://www.example.com" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
             <!-- Card 2 -->
-            <div class="col-md-4 mb-4">
+            <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
                 <div class="card">
                     <img src="https://via.placeholder.com/150" class="card-img-top" alt="Hotels and Resorts in the World">
                     <div class="card-body">
@@ -32,50 +31,15 @@
                 </div>
             </div>
             <!-- Card 3 -->
-            <div class="col-md-4 mb-4">
+            <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
                 <div class="card">
                     <img src="https://via.placeholder.com/150" class="card-img-top" alt="7 Benefits of Holiday Ownerships">
                     <div class="card-body">
                         <h5 class="card-title">7 Benefits of Holiday Ownerships</h5>
-                        <a href="benifits.html" class="btn btn-primary">Learn More</a>
+                        <a href="benefits.html" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
             <!-- Card 4 -->
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Maintenance of Ownership">
-                    <div class="card-body">
-                        <h5 class="card-title">Maintenance of Ownership</h5>
-                        <a href="amc.html" class="btn btn-primary">Learn More</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Card 5 -->
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Exchange And Custom Holidays">
-                    <div class="card-body">
-                        <h5 class="card-title">Exchange And Custom Holidays</h5>
-                        <a href="exc.html" class="btn btn-primary">Learn More</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Card 6 -->
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Inflation and Tariffs">
-                    <div class="card-body">
-                        <h5 class="card-title">Inflation and Tariffs</h5>
-                        <a href="fl.html" class="btn btn-primary">Learn More</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
-</body>
-</html>
+            <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
+               
