--- a/map.html
+++ b/map.html
@@ -22,7 +22,7 @@
             height: 50px; /* Adjust size for each continent */
             text-align: center;
             line-height: 50px;
-            color: white; /* Adjust text color as needed */
+            color: black; /* Adjust text color as needed */
             font-weight: bold;
             text-decoration: none;
         }
@@ -32,7 +32,7 @@
         #north-america { top: 150px; left: 100px; background-color: rgba(255, 165, 0, 0.5); }
         #south-america { top: 220px; left: 100px; background-color: rgba(255, 192, 203, 0.5); }
         #australia { top: 220px; left: 450px; background-color: rgba(0, 255, 255, 0.5); }
-        #antarctica { top: 270px; left: 300px; background-color: rgba(255, 255, 255, 0.5); }
+        #antarctica { top: 270px; left: 300px; background-color: rgba(0, 255, 128, 0.5); }
     </style>
 </head>
 <body>
