--- a/i.html
+++ b/i.html
@@ -1,3 +1,6 @@
-<embed type="text/html" src="one.html">
-<embed type="text/html" src="two.html">
-<embed type="text/html" src="three.html">
+<embed type="text/html" src="p/a.html">
+<embed type="text/html" src="p/b.html">
+<embed type="text/html" src="p/c.html">
+<embed type="text/html" src="p/x.html">
+<embed type="text/html" src="p/y.html">
+<embed type="text/html" src="p/z.html">
