--- a/app/index.html
+++ b/app/index.html
@@ -5,32 +5,32 @@
     <title>Embedding with JavaScript</title>
     <script>
         function loadHTML() {
-            fetch(/app/1.html')
+            fetch(app/1.html')
                 .then(response => response.text())
                 .then(data => {
                     document.getElementById('1').innerHTML = data;
                 });}
       function loadHTML() {
-            fetch('/app/2.html')
+            fetch('app/2.html')
                 .then(response => response.text())
                 .then(data => {
                     document.getElementById('2').innerHTML = data;
                 });}
         function loadHTML() {
-            fetch('3.html')
+            fetch(app/3.html')
                 .then(response => response.text())
                 .then(data => {
                     document.getElementById('3').innerHTML = data;
                 });}
         
          function loadHTML() {
-            fetch('6.html')
+            fetch('app/6.html')
                 .then(response => response.text())
                 .then(data => {
                     document.getElementById('6').innerHTML = data;
                 });}
         function loadHTML() {
-            fetch('9.html')
+            fetch('app/9.html')
                 .then(response => response.text())
                 .then(data => {
                     document.getElementById('9').innerHTML = data;
