--- a/app/9.html
+++ b/app/9.html
@@ -1,5 +1,8 @@
+<footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2024 Article Site</p>
+    </footer>
 
-   <!-- Bootstrap JS and dependencies -->
+    <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
