--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,15 @@
         
         window.onload = loadHTML;
     </script>
+       <style>
+        .article-photo {
+            max-width: 100%;
+            height: auto;
+        }
+        .article-content {
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
     <div id="1"></div>
