--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <title>Embedding with JavaScript</title>
     <script>
         function loadHTML() {
-            const files = ['https://myslides.github.io/app/1.html', 'https://myslides.github.io/app/2.html', 'https://myslides.github.io/app/3.html', 'https://myslides.github.io/app/6.html', 'https://myslides.github.io/app/9.html'];
+            const files = ['https://myslides.github.io/app/3.html', 'https://myslides.github.io/app/6.html', 'https://myslides.github.io/app/9.html'];
             files.forEach((file, index) => {
                 fetch(file)
                     .then(response => response.text())
