--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Embedding with JavaScript</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
+
     <script>
         function loadHTML() {
             const files = ['https://myslides.github.io/app/3.html', 'https://myslides.github.io/app/6.html', 'https://myslides.github.io/app/9.html'];
