--- a/app/1.html
+++ b/app/1.html
@@ -1,73 +1,92 @@
+<div class="card-sliders ">
+	<div class="container ">
+		<div class="row align-items-center">
+			<div class="col-md">
+				<h3>Animated Bootstrap card decks</h3>
+				<p class="lead">Using Bootstrap, Animate.css and jQuery</p>
+				
+				<div class="row mt-5">
+					<div class="col-lg">
+						<div class="card-decks">
+							<div class="card-deck deck-active">
+								<div class="card">
+								  <img class="card-img" src="https://images.pexels.com/photos/1660995/pexels-photo-1660995.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Card image">
+								  <div class="card-img-overlay">
+									 <h5 class="card-title">An awesome title</h5>
+									 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, maiores.</p>
+									 <p class="card-text">
+										 Photo taken by
+										 <a href="https://www.pexels.com/nl-nl/foto/architectuur-ijsland-toren-vuurtoren-1660995/">Tomáš Malík</a>
+									</p>
+								  </div>
+								</div>
+								<div class="card">
+							  <img class="card-img" src="https://images.pexels.com/photos/2501968/pexels-photo-2501968.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Card image">
+							  <div class="card-img-overlay">
+								 <h5 class="card-title">An awesome title</h5>
+								 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, maiores.</p>
+								 <p class="card-text">
+									 Photo taken by
+									 <a href="https://www.pexels.com/nl-nl/@jeffrey-czum-254391">Jeffrey Czum</a>
+								</p>
+							  </div>
+							</div>
+								<div class="card">
+							  <img class="card-img" src="https://images.pexels.com/photos/96932/pexels-photo-96932.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Card image">
+							  <div class="card-img-overlay">
+								 <h5 class="card-title">An awesome title</h5>
+								 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, maiores.</p>
+								 <p class="card-text">
+									 Photo taken by
+									 <a href="https://www.pexels.com/nl-nl/@francesco-ungaro">Francesco Ungaro</a>
+								</p>
+							  </div>
+							</div>
+							</div>
+							<div class="card-deck">
+								<div class="card">
+								  <img class="card-img" src="https://images.pexels.com/photos/3715436/pexels-photo-3715436.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Card image">
+								  <div class="card-img-overlay">
+									 <h5 class="card-title">An awesome title</h5>
+									 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, maiores.</p>
+									 <p class="card-text">
+										 Photo taken by
+										 <a href="https://www.pexels.com/nl-nl/@aleksey-kuprikov-1883853">
+Aleksey Kuprikov</a>
+									</p>
+								  </div>
+								</div>
+								<div class="card">
+							  <img class="card-img" src="https://images.pexels.com/photos/1829191/pexels-photo-1829191.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Card image">
+							  <div class="card-img-overlay">
+								 <h5 class="card-title">An awesome title</h5>
+								 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, maiores.</p>
+								 <p class="card-text">
+									 Photo taken by
+									 <a href="https://www.pexels.com/nl-nl/@braydenlaw">Brayden Law</a>
+								</p>
+							  </div>
+							</div>
+								<div class="card">
+							  <img class="card-img" src="https://images.pexels.com/photos/2096698/pexels-photo-2096698.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Card image">
+							  <div class="card-img-overlay">
+								 <h5 class="card-title">An awesome title</h5>
+								 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, maiores.</p>
+								 <p class="card-text">
+									 Photo taken by
+									 <a href="https://www.pexels.com/nl-nl/@braydenlaw">Brayden Law</a>
+								</p>
+							  </div>
+							</div>
+							</div>
+						</div>
+					</div>
 
-    <header class="bg-primary text-white text-center py-3">
-        <h1>Article Site</h1>
-        <p class="lead">Explore our latest stories and visuals.</p>
-    </header>
-
-    <div class="container my-4">
-        <div class="row">
-            <!-- Article Block 1 -->
-            <div class="col-md-4 mb-4">
-                <div class="article-content">
-                    <img src="https://via.placeholder.com/400" class="article-photo" alt="Story Image 1">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id venenatis arcu. Cras ultricies ligula sed urna dapibus, et luctus purus elementum.</p>
-                </div>
-            </div>
-            <!-- Article Block 2 -->
-            <div class="col-md-4 mb-4">
-                <div class="article-content">
-                    <img src="https://via.placeholder.com/400" class="article-photo" alt="Story Image 2">
-                    <p>Maecenas fringilla, lorem non vehicula luctus, libero ligula tristique sapien, at maximus elit libero sed augue. Donec euismod urna vel nisl varius, eget lacinia justo luctus.</p>
-                </div>
-            </div>
-            <!-- Article Block 3 -->
-            <div class="col-md-4 mb-4">
-                <div class="article-content">
-                    <img src="https://via.placeholder.com/400" class="article-photo" alt="Story Image 3">
-                    <p>Vivamus nec nisl velit. Ut ac semper lectus. Phasellus dapibus, purus nec rhoncus lacinia, dui ipsum fermentum libero, eget imperdiet ex mi a purus.</p>
-                </div>
-            </div>
-            <!-- Article Block 4 -->
-            <div class="col-md-4 mb-4">
-                <div class="article-content">
-                    <img src="https://via.placeholder.com/400" class="article-photo" alt="Story Image 4">
-                    <p>Curabitur non gravida justo. Nullam facilisis urna at vehicula vehicula. Aliquam erat volutpat. Fusce vulputate turpis et mauris fringilla facilisis.</p>
-                </div>
-            </div>
-            <!-- Article Block 5 -->
-            <div class="col-md-4 mb-4">
-                <div class="article-content">
-                    <img src="https://via.placeholder.com/400" class="article-photo" alt="Story Image 5">
-                    <p>Integer vitae arcu in nulla pharetra tempor. Nulla facilisi. Integer vehicula tortor ut libero tempus, ut auctor justo suscipit.</p>
-                </div>
-            </div>
-            <!-- Article Block 6 -->
-            <div class="col-md-4 mb-4">
-                <div class="article-content">
-                    <img src="https://via.placeholder.com/400" class="article-photo" alt="Story Image 6">
-                    <p>Nam at lacinia turpis. Duis sed consectetur tortor. Cras ac tincidunt risus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-                </div>
-            </div>
-            <!-- Article Block 7 -->
-            <div class="col-md-4 mb-4">
-                <div class="article-content">
-                    <img src="https://via.placeholder.com/400" class="article-photo" alt="Story Image 7">
-                    <p>Donec scelerisque, sapien eu varius luctus, magna nunc fringilla neque, ut tincidunt ipsum dui a nunc. Aliquam eget eros vel augue aliquet vehicula.</p>
-                </div>
-            </div>
-            <!-- Article Block 8 -->
-            <div class="col-md-4 mb-4">
-                <div class="article-content">
-                    <img src="https://via.placeholder.com/400" class="article-photo" alt="Story Image 8">
-                    <p>Ut faucibus ligula id diam sagittis, sit amet tincidunt magna lacinia. Suspendisse potenti. Nullam ut lorem et erat pellentesque bibendum.</p>
-                </div>
-            </div>
-            <!-- Article Block 9 -->
-            <div class="col-md-4 mb-4">
-                <div class="article-content">
-                    <img src="https://via.placeholder.com/400" class="article-photo" alt="Story Image 9">
-                    <p>In non dolor sed urna vestibulum bibendum. Nulla facilisi. Aliquam erat volutpat. Donec in convallis sem, sit amet facilisis nunc.</p>
-                </div>
-            </div>
-        </div>
-    </div>
+				</div>
+			
+				
+			</div>
+		</div>
+		
+	</div>
+</div>
