--- a/app/3.html
+++ b/app/3.html
@@ -1,19 +1,23 @@
 <div class="container mt-4">
     <div class="row">
-        <!-- Card with Image -->
+        <!-- Image Card -->
         <div class="col-md-6 mb-4">
             <div class="card">
-                <img src="https://via.placeholder.com/500x300" class="card-img-top" alt="Card Image">
+                <img src="https://via.placeholder.com/500x300?text=Mountain+View" class="card-img-top" alt="Mountain View">
+                <div class="card-body">
+                    <h5 class="card-title">Mountain View</h5>
+                    <p class="card-text">A stunning view of the mountains. Enjoy the natural beauty and serene environment that Auli has to offer.</p>
+                </div>
             </div>
         </div>
 
-        <!-- Card with Text -->
+        <!-- Text Card -->
         <div class="col-md-6 mb-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Card Title</h5>
-                    <p class="card-text card-text-medium">This is a medium-sized text inside the card. It can be used for a brief description or any important information you want to highlight.</p>
-                    <a href="#" class="btn btn-primary">Read More</a>
+                    <h5 class="card-title">About Auli</h5>
+                    <p class="card-text">Auli, located in Uttarakhand, is a popular hill station known for its skiing and breathtaking mountain views. It offers a perfect escape for those looking to experience tranquility amidst the majestic Himalayas.</p>
+                    <a href="#" class="btn btn-primary">Learn More</a>
                 </div>
             </div>
         </div>
