--- a/app/9.html
+++ b/app/9.html
@@ -1,22 +1,22 @@
 <div class="container mt-4">
     <div class="row">
-        <!-- Mountain Photo Card -->
+        <!-- Image Card -->
         <div class="col-md-6 mb-4">
             <div class="card">
                 <img src="https://via.placeholder.com/500x300?text=Mountain+View" class="card-img-top" alt="Mountain View">
                 <div class="card-body">
-                    <h5 class="card-title">Breathtaking Mountain View</h5>
-                    <p class="card-text">Enjoy the majestic views of the snow-capped peaks and lush green valleys. Auli is renowned for its stunning landscapes that offer both tranquility and adventure.</p>
+                    <h5 class="card-title">Mountain View</h5>
+                    <p class="card-text">A stunning view of the mountains. Enjoy the natural beauty and serene environment that Auli has to offer.</p>
                 </div>
             </div>
         </div>
 
-        <!-- Information about Auli Card -->
+        <!-- Text Card -->
         <div class="col-md-6 mb-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Discover Auli, Uttarakhand</h5>
-                    <p class="card-text card-text-medium">Auli, located in Uttarakhand, is a beautiful hill station known for its ski slopes and panoramic mountain views. It is a popular destination for adventure enthusiasts and those looking to escape the hustle and bustle of city life. The serene environment, combined with opportunities for skiing, trekking, and sightseeing, makes Auli a must-visit location.</p>
+                    <h5 class="card-title">About Auli</h5>
+                    <p class="card-text">Auli, located in Uttarakhand, is a popular hill station known for its skiing and breathtaking mountain views. It offers a perfect escape for those looking to experience tranquility amidst the majestic Himalayas.</p>
                     <a href="#" class="btn btn-primary">Learn More</a>
                 </div>
             </div>
