--- a/app/3.html
+++ b/app/3.html
@@ -2,13 +2,39 @@
     <div class="row">
         <!-- Image Card -->
         <div class="col-md-6 mb-4">
-            <div class="card">
-                <img src="https://via.placeholder.com/500x300?text=Mountain+View" class="card-img-top" alt="Mountain View">
-                <div class="card-body">
-                    <h5 class="card-title">Mountain View</h5>
-                    <p class="card-text">A stunning view of the mountains. Enjoy the natural beauty and serene environment that Auli has to offer.</p>
-                </div>
-            </div>
+            <div id="giphySlides" class="carousel slide" data-bs-ride="carousel">
+	<div class="carousel-inner">
+		<div class="carousel-item active">
+			<img src="https://picsum.photos/800/400?random=1" class="d-block w-100" alt="Random Image 1">
+		</div>
+		<div class="carousel-item">
+			<img src="https://picsum.photos/800/400?random=2" class="d-block w-100" alt="Random Image 2">
+		</div>
+		<div class="carousel-item">
+			<img src="https://picsum.photos/800/400?random=3" class="d-block w-100" alt="Random Image 3">
+		</div>
+		<div class="carousel-item">
+			<img src="https://picsum.photos/800/400?random=4" class="d-block w-100" alt="Random Image 4">
+		</div>
+		<div class="carousel-item">
+			<img src="https://picsum.photos/800/400?random=5" class="d-block w-100" alt="Random Image 5">
+		</div>
+		<div class="carousel-item">
+			<img src="https://picsum.photos/800/400?random=6" class="d-block w-100" alt="Random Image 6">
+		</div>
+		<div class="carousel-item">
+			<img src="https://picsum.photos/800/400?random=7" class="d-block w-100" alt="Random Image 7">
+		</div>
+	</div>
+	<button class="carousel-control-prev" type="button" data-bs-target="#giphySlides" data-bs-slide="prev">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="visually-hidden">Previous</span>
+	</button>
+	<button class="carousel-control-next" type="button" data-bs-target="#giphySlides" data-bs-slide="next">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="visually-hidden">Next</span>
+	</button>
+</div>
         </div>
 
         <!-- Text Card -->
