--- a/loc/eu.html
+++ b/loc/eu.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="List of European countries with links to detailed pages and images.">
-	<title>Country List</title>
-	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+	<meta name="description" content="List of European countries with population and subregion information.">
+	<title>Countries in Europe</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	<style>
 		.country-item img {
 			width: 100%;
@@ -22,184 +22,202 @@
 			text-align: center;
 			margin: 0;
 		}
+		.table {
+			margin-top: 20px;
+		}
 	</style>
 </head>
 <body>
 	<header>
 		<div class="container">
-			<h1 class="my-4">European Country List</h1>
+			<h1 class="my-4">Countries in Europe (45 Countries)</h1>
+			<p>Total Population: 747.8 million (as of 2021)</p>
+			<p>Europe is one of the seven continents, making up about 2% of Earth’s surface with a total area of 10,180,000 km². It’s the second smallest continent but the third largest by population.</p>
 		</div>
 	</header>
 	<main>
 		<div class="container">
-			<div class="row">
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/luxembourg.html" aria-label="Luxembourg">
-						<img src="/Countries/lu.svg" alt="Flag of Luxembourg">
-						<p>Luxembourg</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/belgium.html" aria-label="Belgium">
-						<img src="/Countries/be.svg" alt="Flag of Belgium">
-						<p>Belgium</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/hungary.html" aria-label="Hungary">
-						<img src="/Countries/hu.svg" alt="Flag of Hungary">
-						<p>Hungary</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/estonia.html" aria-label="Estonia">
-						<img src="/Countries/ee.svg" alt="Flag of Estonia">
-						<p>Estonia</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/poland.html" aria-label="Poland">
-						<img src="/Countries/pl.svg" alt="Flag of Poland">
-						<p>Poland</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/netherlands.html" aria-label="Netherlands">
-						<img src="/Countries/nl.svg" alt="Flag of Netherlands">
-						<p>Netherlands</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/bulgaria.html" aria-label="Bulgaria">
-						<img src="/Countries/bg.svg" alt="Flag of Bulgaria">
-						<p>Bulgaria</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/lithuania.html" aria-label="Lithuania">
-						<img src="/Countries/lt.svg" alt="Flag of Lithuania">
-						<p>Lithuania</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/sweden.html" aria-label="Sweden">
-						<img src="/Countries/se.svg" alt="Flag of Sweden">
-						<p>Sweden</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/france.html" aria-label="France">
-						<img src="/Countries/fr.svg" alt="Flag of France">
-						<p>France</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/germany.html" aria-label="Germany">
-						<img src="/Countries/de.svg" alt="Flag of Germany">
-						<p>Germany</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/denmark.html" aria-label="Denmark">
-						<img src="/Countries/dk.svg" alt="Flag of Denmark">
-						<p>Denmark</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/spain.html" aria-label="Spain">
-						<img src="/Countries/es.svg" alt="Flag of Spain">
-						<p>Spain</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/san-marino.html" aria-label="San Marino">
-						<img src="/Countries/sm.svg" alt="Flag of San Marino">
-						<p>San Marino</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/finland.html" aria-label="Finland">
-						<img src="/Countries/fi.svg" alt="Flag of Finland">
-						<p>Finland</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/liechtenstein.html" aria-label="Liechtenstein">
-						<img src="/Countries/li.svg" alt="Flag of Liechtenstein">
-						<p>Liechtenstein</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/greece.html" aria-label="Greece">
-						<img src="/Countries/gr.svg" alt="Flag of Greece">
-						<p>Greece</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/norway.html" aria-label="Norway">
-						<img src="/Countries/no.svg" alt="Flag of Norway">
-						<p>Norway</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/italy.html" aria-label="Italy">
-						<img src="/Countries/it.svg" alt="Flag of Italy">
-						<p>Italy</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/romania.html" aria-label="Romania">
-						<img src="/Countries/ro.svg" alt="Flag of Romania">
-						<p>Romania</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/austria.html" aria-label="Austria">
-						<img src="/Countries/at.svg" alt="Flag of Austria">
-						<p>Austria</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/portugal.html" aria-label="Portugal">
-						<img src="/Countries/pt.svg" alt="Flag of Portugal">
-						<p>Portugal</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/iceland.html" aria-label="Iceland">
-						<img src="/Countries/is.svg" alt="Flag of Iceland">
-						<p>Iceland</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/malta.html" aria-label="Malta">
-						<img src="/Countries/mt.svg" alt="Flag of Malta">
-						<p>Malta</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/croatia.html" aria-label="Croatia">
-						<img src="/Countries/hr.svg" alt="Flag of Croatia">
-						<p>Croatia</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/slovakia.html" aria-label="Slovakia">
-						<img src="/Countries/sk.svg" alt="Flag of Slovakia">
-						<p>Slovakia</p>
-					</a>
-				</div>
-				<div class="col-md-4 col-lg-3 country-item">
-					<a href="/slovenia.html" aria-label="Slovenia">
-						<img src="/Countries/si.svg" alt="Flag of Slovenia">
-						<p>Slovenia</p>
-					</a>
-				</div>
-			</div>
-		</div>
-	</main>
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Country</th>
+						<th>Flag</th>
+						<th>Population (2020)</th>
+						<th>Subregion</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>1</td>
+						<td>Russia</td>
+						<td><img src="/Countries/ru.svg" alt="Flag of Russia"></td>
+						<td>145,934,462</td>
+						<td>Eastern Europe</td>
+					</tr>
+					<tr>
+						<td>2</td>
+						<td>Germany</td>
+						<td><img src="/Countries/de.svg" alt="Flag of Germany"></td>
+						<td>83,783,942</td>
+						<td>Western Europe</td>
+					</tr>
+					<tr>
+						<td>3</td>
+						<td>United Kingdom</td>
+						<td><img src="/Countries/gb.svg" alt="Flag of United Kingdom"></td>
+						<td>67,886,011</td>
+						<td>Northern Europe</td>
+					</tr>
+					<tr>
+						<td>4</td>
+						<td>France</td>
+						<td><img src="/Countries/fr.svg" alt="Flag of France"></td>
+						<td>65,273,511</td>
+						<td>Western Europe</td>
+					</tr>
+					<tr>
+						<td>5</td>
+						<td>Italy</td>
+						<td><img src="/Countries/it.svg" alt="Flag of Italy"></td>
+						<td>60,461,826</td>
+						<td>Southern Europe</td>
+					</tr>
+					<tr>
+						<td>6</td>
+						<td>Spain</td>
+						<td><img src="/Countries/es.svg" alt="Flag of Spain"></td>
+						<td>46,754,778</td>
+						<td>Southern Europe</td>
+					</tr>
+					<tr>
+						<td>7</td>
+						<td>Ukraine</td>
+						<td><img src="/Countries/ua.svg" alt="Flag of Ukraine"></td>
+						<td>43,733,762</td>
+						<td>Eastern Europe</td>
+					</tr>
+					<tr>
+						<td>8</td>
+						<td>Poland</td>
+						<td><img src="/Countries/pl.svg" alt="Flag of Poland"></td>
+						<td>37,846,611</td>
+						<td>Eastern Europe</td>
+					</tr>
+					<tr>
+						<td>9</td>
+						<td>Romania</td>
+						<td><img src="/Countries/ro.svg" alt="Flag of Romania"></td>
+						<td>19,237,691</td>
+						<td>Eastern Europe</td>
+					</tr>
+					<tr>
+						<td>10</td>
+						<td>Netherlands</td>
+						<td><img src="/Countries/nl.svg" alt="Flag of Netherlands"></td>
+						<td>17,134,872</td>
+						<td>Western Europe</td>
+					</tr>
+					<tr>
+						<td>11</td>
+						<td>Belgium</td>
+						<td><img src="/Countries/be.svg" alt="Flag of Belgium"></td>
+						<td>11,589,623</td>
+						<td>Western Europe</td>
+					</tr>
+					<tr>
+						<td>12</td>
+						<td>Czechia</td>
+						<td><img src="/Countries/cz.svg" alt="Flag of Czechia"></td>
+						<td>10,708,981</td>
+						<td>Eastern Europe</td>
+					</tr>
+					<tr>
+						<td>13</td>
+						<td>Greece</td>
+						<td><img src="/Countries/gr.svg" alt="Flag of Greece"></td>
+						<td>10,423,054</td>
+						<td>Southern Europe</td>
+					</tr>
+					<tr>
+						<td>14</td>
+						<td>Portugal</td>
+						<td><img src="/Countries/pt.svg" alt="Flag of Portugal"></td>
+						<td>10,196,709</td>
+						<td>Southern Europe</td>
+					</tr>
+					<tr>
+						<td>15</td>
+						<td>Sweden</td>
+						<td><img src="/Countries/se.svg" alt="Flag of Sweden"></td>
+						<td>10,099,265</td>
+						<td>Northern Europe</td>
+					</tr>
+					<tr>
+						<td>16</td>
+						<td>Hungary</td>
+						<td><img src="/Countries/hu.svg" alt="Flag of Hungary"></td>
+						<td>9,660,351</td>
+						<td>Eastern Europe</td>
+					</tr>
+					<tr>
+						<td>17</td>
+						<td>Belarus</td>
+						<td><img src="/Countries/by.svg" alt="Flag of Belarus"></td>
+						<td>9,449,323</td>
+						<td>Eastern Europe</td>
+					</tr>
+					<tr>
+						<td>18</td>
+						<td>Austria</td>
+						<td><img src="/Countries/at.svg" alt="Flag of Austria"></td>
+						<td>9,006,398</td>
+						<td>Western Europe</td>
+					</tr>
+					<tr>
+						<td>19</td>
+						<td>Serbia</td>
+						<td><img src="/Countries/rs.svg" alt="Flag of Serbia"></td>
+						<td>8,737,371</td>
+						<td>Southern Europe</td>
+					</tr>
+					<tr>
+						<td>20</td>
+						<td>Switzerland</td>
+						<td><img src="/Countries/ch.svg" alt="Flag of Switzerland"></td>
+						<td>8,654,622</td>
+						<td>Western Europe</td>
+					</tr>
+					<tr>
+						<td>21</td>
+						<td>Bulgaria</td>
+						<td><img src="/Countries/bg.svg" alt="Flag of Bulgaria"></td>
+						<td>6,948,445</td>
+						<td>Eastern Europe</td>
+					</tr>
+					<tr>
+						<td>22</td>
+						<td>Denmark</td>
+						<td><img src="/Countries/dk.svg" alt="Flag of Denmark"></td>
+						<td>5,792,202</td>
+						<td>Northern Europe</td>
+					</tr>
+					<tr>
+						<td>23</td>
+						<td>Finland</td>
+						<td><img src="/Countries/fi.svg" alt="Flag of Finland"></td>
+						<td>5,540,720</td>
+						<td>Northern Europe</td>
+					</tr>
+					<tr>
+						<td>24</td>
+						<td>Slovakia</td>
+						<td><img src="/Countries/sk.svg" alt="Flag of Slovakia"></td>
+						<td>5,459,642</td>
+						<td>Eastern Europe</td>
+					</tr>
+					<tr>
+						<td>25</td>
+						<td>Norway</td>
+						<td><
+							    
