--- a/app/9.html
+++ b/app/9.html
@@ -1,25 +1,69 @@
-<div class="container mt-4">
-    <div class="row">
-        <!-- Image Card -->
-        <div class="col-md-6 mb-4">
-            <div class="card">
-                <img src="https://via.placeholder.com/500x300?text=Mountain+View" class="card-img-top" alt="Mountain View">
-                <div class="card-body">
-                    <h5 class="card-title">Mountain View</h5>
-                    <p class="card-text">A stunning view of the mountains. Enjoy the natural beauty and serene environment that Auli has to offer.</p>
-                </div>
-            </div>
-        </div>
+<!-- partial:index.partial.html -->
 
-        <!-- Text Card -->
-        <div class="col-md-6 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">About Auli</h5>
-                    <p class="card-text">Auli, located in Uttarakhand, is a popular hill station known for its skiing and breathtaking mountain views. It offers a perfect escape for those looking to experience tranquility amidst the majestic Himalayas.</p>
-                    <a href="#" class="btn btn-primary">Learn More</a>
-                </div>
-            </div>
-        </div>
+<div class="nav-wrapper">
+  
+    <div class="item">
+      <div class="img-wrapper"><img src="https://loremflickr.com/g/1080/1080/asia" alt="Asia"></div>
+      <div class="content-wrapper">
+        <h1>Asia</h1>
+        <p>Explore the diverse cultures and landscapes of Asia. Celebrate festivals like Diwali in India, Lunar New Year in China, and Hanami (cherry blossom viewing) in Japan.</p>
+        <a href="">Discover More</a>
+      </div>
     </div>
+
+    <div class="item">
+      <div class="img-wrapper"><img src="https://loremflickr.com/g/1080/1080/africa" alt="Africa"></div>
+      <div class="content-wrapper">
+        <h1>Africa</h1>
+        <p>Discover the beauty and wildlife of Africa. Experience vibrant holidays such as the Maasai Mara Festival in Kenya, the Timkat Festival in Ethiopia, and the Cape Town Carnival in South Africa.</p>
+        <a href="">Discover More</a>
+      </div>
+    </div>
+
+    <div class="item">
+      <div class="img-wrapper"><img src="https://loremflickr.com/g/1080/1080/europe" alt="Europe"></div>
+      <div class="content-wrapper">
+        <h1>Europe</h1>
+        <p>Experience the history and culture of Europe. Enjoy famous celebrations like Oktoberfest in Germany, the Running of the Bulls in Spain, and the Edinburgh Festival Fringe in Scotland.</p>
+        <a href="">Discover More</a>
+      </div>
+    </div>
+  
+    <div class="item">
+      <div class="img-wrapper"><img src="https://loremflickr.com/g/1080/1080/north-america" alt="North America"></div>
+      <div class="content-wrapper">
+        <h1>North America</h1>
+        <p>Explore the diverse landscapes of North America. Participate in major events like Mardi Gras in New Orleans, the Calgary Stampede in Canada, and the Day of the Dead celebrations in Mexico.</p>
+        <a href="">Discover More</a>
+      </div>
+    </div>
+
+    <div class="item">
+      <div class="img-wrapper"><img src="https://loremflickr.com/g/1080/1080/south-america" alt="South America"></div>
+      <div class="content-wrapper">
+        <h1>South America</h1>
+        <p>Immerse yourself in the cultures of South America. Celebrate Carnival in Brazil, the Inti Raymi Festival in Peru, and the Guelaguetza Festival in Mexico.</p>
+        <a href="">Discover More</a>
+      </div>
+    </div>
+
+    <div class="item">
+      <div class="img-wrapper"><img src="https://loremflickr.com/g/1080/1080/australia" alt="Australia"></div>
+      <div class="content-wrapper">
+        <h1>Australia</h1>
+        <p>Enjoy the natural beauty and unique wildlife of Australia. Experience the Sydney New Year's Eve fireworks, the Melbourne Cup horse race, and the Ghan railway journey across the Outback.</p>
+        <a href="">Discover More</a>
+      </div>
+    </div>
+    
+    <div class="item">
+      <div class="img-wrapper"><img src="https://loremflickr.com/g/1080/1080/antarctica" alt="Antarctica"></div>
+      <div class="content-wrapper">
+        <h1>Antarctica</h1>
+        <p>Experience the icy wonders of Antarctica. Although it's more about exploration than festivals, you can enjoy unique experiences like the Antarctic Midnight Sun and the annual polar plunge event.</p>
+        <a href="">Discover More</a>
+      </div>
+    </div>
+  
 </div>
+<!-- partial -->
