--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/app/public/css/style.css">
+    <link rel="stylesheet" href="/app/public/css/one.css">
+    <link rel="stylesheet" href="/app/public/css/two.css">
+    <link rel="stylesheet" href="/app/public/css/three.css">    
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700" rel="stylesheet">
     
     <script>
         function loadHTML() {
@@ -36,6 +40,9 @@
 	
 </script> 
     <script src="https://myslides.github.io/app/1.js"></script>
+        <script src="https://myslides.github.io/app/public/js/one.js"></script>
+                <script src="https://myslides.github.io/app/public/js/two.js"></script>
+                        <script src="https://myslides.github.io/app/public/js/three.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.7/umd/popper.min.js"></script>
