--- a/app/index.html
+++ b/app/index.html
@@ -6,10 +6,10 @@
     <title>My Slides Github Website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/app/public/css/style.css">
-    <link rel="stylesheet" href="/app/public/css/one.css">
-    <link rel="stylesheet" href="/app/public/css/two.css">
-    <link rel="stylesheet" href="/app/public/css/three.css">    
+    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="/public/css/one.css">
+    <link rel="stylesheet" href="/public/css/two.css">
+    <link rel="stylesheet" href="/public/css/three.css">    
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700" rel="stylesheet">
     
     <script>
