--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
 <div class="nav-wrapper">
   
     <div class="item">
-      <div class="img-wrapper"><img src="https://loremflickr.com/g/1080/1080/asia" alt="Asia"></div>
+      <div class="img-wrapper"><img src="https://loremflickr.com/1080/1080/asia" alt="Asia"></div>
       <div class="content-wrapper">
         <h1>Asia</h1>
         <p>Explore the diverse cultures and landscapes of Asia. Celebrate festivals like Diwali in India, Lunar New Year in China, and Hanami (cherry blossom viewing) in Japan.</p>
@@ -54,7 +54,7 @@
     </div>
 
     <div class="item">
-      <div class="img-wrapper"><img src="https://loremflickr.com/g/1080/1080/africa" alt="Africa"></div>
+      <div class="img-wrapper"><img src="https://loremflickr.com/1080/1080/africa" alt="Africa"></div>
       <div class="content-wrapper">
         <h1>Africa</h1>
         <p>Discover the beauty and wildlife of Africa. Experience vibrant holidays such as the Maasai Mara Festival in Kenya, the Timkat Festival in Ethiopia, and the Cape Town Carnival in South Africa.</p>
@@ -63,7 +63,7 @@
     </div>
 
     <div class="item">
-      <div class="img-wrapper"><img src="https://loremflickr.com/g/1080/1080/europe" alt="Europe"></div>
+      <div class="img-wrapper"><img src="https://loremflickr.com/1080/1080/europe" alt="Europe"></div>
       <div class="content-wrapper">
         <h1>Europe</h1>
         <p>Experience the history and culture of Europe. Enjoy famous celebrations like Oktoberfest in Germany, the Running of the Bulls in Spain, and the Edinburgh Festival Fringe in Scotland.</p>
@@ -72,7 +72,7 @@
     </div>
   
     <div class="item">
-      <div class="img-wrapper"><img src="https://loremflickr.com/g/1080/1080/north-america" alt="North America"></div>
+      <div class="img-wrapper"><img src="https://loremflickr.com/1080/1080/north-america" alt="North America"></div>
       <div class="content-wrapper">
         <h1>North America</h1>
         <p>Explore the diverse landscapes of North America. Participate in major events like Mardi Gras in New Orleans, the Calgary Stampede in Canada, and the Day of the Dead celebrations in Mexico.</p>
@@ -81,7 +81,7 @@
     </div>
 
     <div class="item">
-      <div class="img-wrapper"><img src="https://loremflickr.com/g/1080/1080/south-america" alt="South America"></div>
+      <div class="img-wrapper"><img src="https://loremflickr.com/1080/1080/south-america" alt="South America"></div>
       <div class="content-wrapper">
         <h1>South America</h1>
         <p>Immerse yourself in the cultures of South America. Celebrate Carnival in Brazil, the Inti Raymi Festival in Peru, and the Guelaguetza Festival in Mexico.</p>
@@ -90,7 +90,7 @@
     </div>
 
     <div class="item">
-      <div class="img-wrapper"><img src="https://loremflickr.com/g/1080/1080/australia" alt="Australia"></div>
+      <div class="img-wrapper"><img src="https://loremflickr.com/1080/1080/australia" alt="Australia"></div>
       <div class="content-wrapper">
         <h1>Australia</h1>
         <p>Enjoy the natural beauty and unique wildlife of Australia. Experience the Sydney New Year's Eve fireworks, the Melbourne Cup horse race, and the Ghan railway journey across the Outback.</p>
@@ -99,7 +99,7 @@
     </div>
     
     <div class="item">
-      <div class="img-wrapper"><img src="https://loremflickr.com/g/1080/1080/antarctica" alt="Antarctica"></div>
+      <div class="img-wrapper"><img src="https://loremflickr.com/1080/1080/antarctica" alt="Antarctica"></div>
       <div class="content-wrapper">
         <h1>Antarctica</h1>
         <p>Experience the icy wonders of Antarctica. Although it's more about exploration than festivals, you can enjoy unique experiences like the Antarctic Midnight Sun and the annual polar plunge event.</p>
