--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
     
 
     <!-- partial:index.partial.html -->
-
+<div class="container-fluid">
 <div class="nav-wrapper">
   
     <div class="item">
@@ -107,6 +107,8 @@
       </div>
     </div>
   </div>
+  </div>
+
 <!-- partial -->
 	
 </script> 
