--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Slides Homepage</title>
-    <meta http-equiv="refresh" content="0; url=http://myslides.github.io/app/" />
+    /* <meta http-equiv="refresh" content="0; url="" /> */
     <style>
     div {
   /* Finally, a use for "groove"! */
