--- a/loc/eu.html
+++ b/loc/eu.html
@@ -219,5 +219,98 @@
 					<tr>
 						<td>25</td>
 						<td>Norway</td>
-						<td><
-							    
+						<td><img src="/Countries/no.svg" alt="Flag of Norway"></td>
+						<td>5,421,241</td>
+						<td>Northern Europe</td>
+					</tr>
+					<tr>
+						<td>26</td>
+						<td>Ireland</td>
+						<td><img src="/Countries/ie.svg" alt="Flag of Ireland"></td>
+						<td>4,994,724</td>
+						<td>Northern Europe</td>
+					</tr>
+					<tr>
+						<td>27</td>
+						<td>Croatia</td>
+						<td><img src="/Countries/hr.svg" alt="Flag of Croatia"></td>
+						<td>4,047,200</td>
+						<td>Southern Europe</td>
+					</tr>
+					<tr>
+						<td>28</td>
+						<td>Moldova</td>
+						<td><img src="/Countries/md.svg" alt="Flag of Moldova"></td>
+						<td>2,657,641</td>
+						<td>Eastern Europe</td>
+					</tr>
+					<tr>
+						<td>29</td>
+						<td>Slovenia</td>
+						<td><img src="/Countries/si.svg" alt="Flag of Slovenia"></td>
+						<td>2,078,724</td>
+						<td>Southern Europe</td>
+					</tr>
+					<tr>
+						<td>30</td>
+						<td>Montenegro</td>
+						<td><img src="/Countries/me.svg" alt="Flag of Montenegro"></td>
+						<td>622,359</td>
+						<td>Southern Europe</td>
+					</tr>
+					<tr>
+						<td>31</td>
+						<td>Malta</td>
+						<td><img src="/Countries/mt.svg" alt="Flag of Malta"></td>
+						<td>514,564</td>
+						<td>Southern Europe</td>
+					</tr>
+					<tr>
+						<td>32</td>
+						<td>Iceland</td>
+						<td><img src="/Countries/is.svg" alt="Flag of Iceland"></td>
+						<td>366,425</td>
+						<td>Northern Europe</td>
+					</tr>
+					<tr>
+						<td>33</td>
+						<td>Andorra</td>
+						<td><img src="/Countries/ad.svg" alt="Flag of Andorra"></td>
+						<td>77,265</td>
+						<td>Southern Europe</td>
+					</tr>
+					<tr>
+						<td>34</td>
+						<td>Monaco</td>
+						<td><img src="/Countries/mc.svg" alt="Flag of Monaco"></td>
+						<td>39,244</td>
+						<td>Western Europe</td>
+					</tr>
+					<tr>
+						<td>35</td>
+						<td>Liechtenstein</td>
+						<td><img src="/Countries/li.svg" alt="Flag of Liechtenstein"></td>
+						<td>38,128</td>
+						<td>Western Europe</td>
+					</tr>
+					<tr>
+						<td>36</td>
+						<td>San Marino</td>
+						<td><img src="/Countries/sm.svg" alt="Flag of San Marino"></td>
+						<td>33,931</td>
+						<td>Southern Europe</td>
+					</tr>
+					<tr>
+						<td>37</td>
+						<td>Vatican City</td>
+						<td><img src="/Countries/va.svg" alt="Flag of Vatican City"></td>
+						<td>801</td>
+						<td>Southern Europe</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</main>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
